resolved overlay alignment

--- a/main.sass
+++ b/main.sass
@@ -79,6 +79,7 @@ width: 70px;
 	background:rgba(0,0,0,.75);
   text-align: left;
   color:white;
+  line-height: 2px;
   height: 2px;
   padding:5px 0 50px 0;
   opacity:0;
@@ -88,4 +89,7 @@ width: 70px;
 
 #box #overlay {
 	opacity:1;
+}
+#box #overlay p{
+
 }
